2012-12-12 Riccardo Mottola <rm@gnu.org>

	* Rresources/FTP.gorm
	recreated popupbuttons to fix strange problem.

2012-10-03 Riccardo Mottola <rm@gnu.org>

	* AppController.h
	* AppController.m
	Fix warnings.

2012-10-03 Riccardo Mottola <rm@gnu.org>

	* AppController.m:
	Clear selection on path change.

2012-10-03 Riccardo Mottola <rm@gnu.org>

	* AppController.m:
	Display conneciton panel at startup.

2012-09-29 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Show progress while listing remotely.

2012-09-29 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Remove useless statement.

2012-09-28 Riccardo Mottola <rm@gnu.org>

	* ftpclient.m
	Get the final size filesize from the 150 response, if it is unknown.

2012-09-28 Riccardo Mottola <rm@gnu.org>

	* fileElement.m:
	Better parsing of sizes, set size of link always to 0.

	* ftpclient.m
	If filesize is unknown, set progress bar to indeterminate.

2012-09-13 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Better runloop management during  progress and log updates.