@@ -1,3 +1,8 @@
+2013-02-04 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.[h,m]
+	Keep connection as ivar and invalidate on closure.
+
 2012-12-12 Riccardo Mottola <rm@gnu.org>
 
 	* Rresources/FTP.gorm
